# case-assignment

./: README.md  Residential Demand South Carolina.csv  Temperatures South Carolina.csv  case_study.ipynb  part2.ipynb  pyproject.toml
